# uboot_tool

./: Cargo.toml  shell.nix
cli/: Cargo.toml
cli/src/: main.rs
src/: client.rs  client_tftp.rs  flash_info.rs  hex_dump.rs  lib.rs  main.rs  parse_utils.rs  terminal_key.rs  tftp_server.rs  variables.rs  version_info.rs
