[package]
name = "uboot_tool"
description = "IP Camera U-Boot tool library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[dependencies]
slab = "0.4"
fxhash = "0.2"
indexmap = "1"
anyhow = "1"
educe = "0.4"
nom = "7"
pin-project-lite = "0.2"
crc32fast = "1"

[dependencies.async-tftp]
version = "0.3"
optional = true

[dependencies.if-addrs]
version = "0.6"
optional = true

[dependencies.ipnetwork]
version = "0.18"
optional = true

[dependencies.futures]
version = "0.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "fs", "time", "io-util", "sync"]

[dependencies.tokio-serial]
version = "5"

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dependencies.tokio-stream]
version = "0.1"

[features]
default = []
tftp = ["async-tftp", "if-addrs", "ipnetwork"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
